exercise111/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: logoutput
# spec:
#   type: ClusterIP
#   selector:
#     app: logoutput
#   ports:
#     - port: 2345
#       protocol: TCP
#       targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: pingpong
      port: 3456
      protocol: TCP
      targetPort: 8081
    - name: logoutputreader
      port: 2345
      protocol: TCP
      targetPort: 8080
