exercise111/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port:
              number: 3456
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port:
              number: 2345
